Course Labs/Lab 05 - Exposing services with Ingress/SourceCode/unit5-02-06-ingress-host-path-based-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: example-ingress-host-based-crd
spec:
  entryPoints:
    - web
  routes:
    - match:  Host(`apple.fruits.org`) && PathPrefix(`/apple`) 
      kind: Rule
      services:
        - name: apple-service
          port: 5678
          strategy: RoundRobin
          weight: 10   
      middlewares:
        - name: do-stripprefix         
    - match: Host(`banana.fruits.org`) && PathPrefix(`/banana`) 
      kind: Rule
      services:
        - name: banana-service
          port: 5678
          strategy: RoundRobin
          weight: 10
      middlewares:
        - name: do-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: do-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /apple
      - /banana
